<resources>
    <string name="app_name">Flexify</string>
    <string name="title">Flexif</string>
    <string name="titleY">y</string>
    <string name="subtitle">Тренироваться\nможет каждый</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleTrackYourGoal">Следуйте за своей целью</string>
    <string name="subtitleTrackYourGoal">В этом приложении вы сможете найти себе цель для тернировок и отслеживать ее</string>
    <string name="next">Далее</string>
    <string name="titleGetBurn">Достигай своего идеала</string>
    <string name="subtitleGetBurn">Начни заниматься, несмотря на боль, чтобы достичь своих целей. Боль — это всего лишь временное явление. Если ты сдашься сейчас, боль будет с тобой навсегда."</string>
    <string name="titleEatWell">Следи за питанием</string>
    <string name="subtitleEatWell">Мы можем отслеживать твой рацион каждый день. Здоровое питание — это весело.</string>
    <string name="titleFindInnerPeace">Найди внутренний покой</string>
    <string name="subtitleFindInnerPeace">Сосредоточься и стремись к достижению своей цели, а всю работу по отслеживанию прогресса доверь нам.</string>
    <string name="Hey">Приветствуем,</string>
    <string name="welcomeBack">С возвращение</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="enter">Войти</string>
    <string name="regText">У вас еще нет аккаунта?\nЗарегистрируйесь</string>
    <string name="loginTitle">Создание аккаунта</string>
    <string name="Name">Имя</string>
    <string name="LastName">Фамилия</string>
    <string name="sinInText">У вас уже есть аккаунт?\nАвторизуйтесь</string>
    <string name="register">Зарегистрироваться</string>
    <string name="titleComplete">Давайте заполним ваш профиль</string>
    <string name="subtitleComplete">Это поможет нам узнать о вас больше!</string>
    <string name="gender">Выберите пол</string>
    <string name="age">Введите возраст</string>
    <string name="weight">KG</string>
    <string name="weightLayout">Введите вес</string>
    <string name="height">CM</string>
    <string name="heightLayout">Введите рост</string>
    <string name="finishReg">Завершить регистрацию</string>
    <string name="successRegTitle">Аккаунт успешно создан</string>
    <string name="subSuccessRegTitle">Теперь скорее заходите под своим аккаунтом и достигайте ваших целей вместе с нами</string>
    <string name="successRegOk">Войти в аккаунт</string>
    <string name="not_all_fields_are_filled_in">Не все поля заполнены</string>
    <string name="error_input">Поле заполнено неверно</string>
    <string name="exit">Выйти</string>


    <string name="Home">Главное меню</string>
    <string name="Info">Справочник</string>
    <string name="SentItem">Статистика</string>
    <string name="Profile">Профиль</string>
    <string name="fullNameExample">Имя Фамилия</string>
    <string name="edit">Редактировать</string>
    <string name="exercises">Упражнения</string>
    <string name="CompositionAndcalorieTable">Состав и калорийность продуктов</string>
    <string name="error_dialog_title">Ошибка</string>
    <string name="error_dialog_message">Отсутствует подключение к интернету. Пожалуйста, проверьте ваше интернет-соединение и повторите попытку.</string>
    <string name="settings">Настройки</string>
    <string name="welcome_message">С Возвращением,</string>
    <string name="statMonth">Статистика за текущий месяц</string>
    <string name="newPassword">Новый пароль</string>
    <string name="fitLevel">Уровень подготовки</string>
    <string name="getTraining">Получить тренировку</string>
    <string name="dishes">Блюда</string>

    <string name="TitleWeightLoss">Статистика каллорий\nдля похудания\n%1$.2f/%2$.2f</string>
    <string name="TitleConsumedFood">Статистика каллорий\nдля\nподдержания веса\n%1$.2f/%2$.2f</string>
    <string name="TitleWeightGain">Статистика каллорий\nдля набора веса\n%1$.2f/%2$.2f</string>
    <string name="calories_format">Калории: %1$.2f ккал</string>
    <string name="get_recipe">Получить рецепт</string>

    <string name="remaining_time_format">Текущее время: %1$d sec</string>
    <string name="rest_time_format">Время отдыха: %1$d sec</string>
    <string name="workout_complete">Workout Complete!</string>
    <string name="sets_reps_format">Подходы: %1$d, Повторения: %2$d</string>
    <string name="weight_format">Вес: %1$d kg</string>
    <string name="elapsed_time_format">Затраченное время: %1$s</string>
    <string name="congratulation">Поздравляем</string>
    <string name="backToHome">Завершить</string>
    <string name="workout">Тренировка</string>
    <string name="StartWorkout">Начать тренировку</string>
    <string name="Exercise">Упражнение</string>
    <string name="CompleteExercise">Выполнено</string>
    <string name="SkipExercise">Пропустить</string>
    <string name="Add10SecondsRest">+10</string>
    <string name="SkipRestTime">Пропустить отдых</string>
</resources>