<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/marginSign"
        android:textColor="@color/black"
        android:textSize="@dimen/titleTextH1"/>

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        style="@style/TextAppearance.Title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupNameLayout"
        android:layout_width="0dp"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginSign"
        android:layout_marginEnd="@dimen/marginSign"
        android:layout_marginTop="@dimen/marginSign"
        app:startIconTint="@color/black"
        app:startIconDrawable="@drawable/ic_profile"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTitle"
        app:hintTextColor="@color/subTextColor"
        android:hint="@string/Name"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:background="@drawable/rounded"
            app:errorEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupLastNameLayout"
        android:layout_width="0dp"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginSign"
        android:layout_marginEnd="@dimen/marginSign"
        android:layout_marginTop="@dimen/marginSign"
        app:startIconDrawable="@drawable/ic_profile"
        android:gravity="center"
        app:startIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupNameLayout"
        app:hintTextColor="@color/subTextColor"
        android:hint="@string/LastName"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupLastNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:background="@drawable/rounded"
            app:errorEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpEmailLayout"
        android:layout_width="0dp"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginSign"
        android:layout_marginEnd="@dimen/marginSign"
        android:layout_marginTop="@dimen/marginSign"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupLastNameLayout"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/black"
        app:hintTextColor="@color/subTextColor"
        android:hint="@string/email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:background="@drawable/rounded"
            app:errorEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginSign"
        android:layout_marginEnd="@dimen/marginSign"
        android:layout_marginTop="@dimen/marginSignMin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailLayout"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/black"
        app:passwordToggleTint="@color/black"
        android:hint="@string/Password"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:background="@drawable/rounded"
            app:errorEnabled="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:text="@string/register"
        android:layout_marginStart="@dimen/marginSign"
        android:layout_marginEnd="@dimen/marginSign"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtHaveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/marginSignMin"/>

    <TextView
        android:id="@+id/txtHaveAcc"
        android:text="@string/sinInText"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/marginSignMin"/>
</androidx.constraintlayout.widget.ConstraintLayout>