<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.signin.SignInFragment">

    <TextView
        android:id="@+id/heyThere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/marginSign"
        android:text="@string/Hey"
        android:textColor="@color/black"
        android:textSize="@dimen/titleTextH1"/>

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heyThere"
        android:layout_margin="@dimen/marginSign"
        android:text="@string/welcomeBack"
        style="@style/TextAppearance.Title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signInLayout"
        android:layout_width="0dp"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginSign"
        android:layout_marginEnd="@dimen/marginSign"
        android:layout_marginTop="@dimen/marginSign"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/black"
        app:hintTextColor="@color/subTextColor"
        android:hint="@string/email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:background="@drawable/rounded"
            app:errorEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginSign"
        android:layout_marginEnd="@dimen/marginSign"
        android:layout_marginTop="@dimen/marginSignMin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInLayout"
        app:passwordToggleEnabled="true"
        android:hint="@string/Password"
        app:startIconTint="@color/black"
        app:passwordToggleTint="@color/black"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            android:background="@drawable/rounded"
            app:errorEnabled="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="52dp"
        android:paddingEnd="52dp"
        android:layout_marginStart="@dimen/marginSign"
        android:layout_marginEnd="@dimen/marginSign"
        android:layout_marginBottom="@dimen/marginSignMin"
        android:background="@drawable/rounded_btn"
        android:drawableStart="@drawable/enter"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtCreateAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        app:layout_constraintVertical_bias="1"/>

    <TextView
        android:layout_margin="@dimen/marginSignMin"
        android:id="@+id/txtCreateAcc"
        android:text="@string/regText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:paddingStart="70dp"
        android:paddingEnd="@dimen/marginSignMin"
        app:layout_constraintBottom_toBottomOf="@+id/enterButton"
        app:layout_constraintEnd_toEndOf="@+id/enterButton"
        app:layout_constraintStart_toStartOf="@+id/enterButton"
        app:layout_constraintTop_toTopOf="@+id/enterButton"
        style="@android:style/Widget.Material.ProgressBar.Small"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_in"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>